# debate-arena

./: .gitignore  ITERATION_SUMMARY.md  PROJECT.md  README.md  program.md  pyproject.toml  results.tsv
debate_arena/: __init__.py
debate_arena/core/: __init__.py  arena.py  debater.py  history.py  judge.py  moderator.py
debate_arena/personas/: __init__.py  presets.py
examples/: climate_debate.py  verify_structure.py
tests/: __init__.py  test_arena.py  test_custom_criteria.py  test_debater.py  test_debater_extended.py  test_edge_cases.py  test_error_handling.py  test_history.py  test_judge.py  test_judge_extended.py  test_moderator.py  test_moderator_extended.py  test_multi_debater.py  test_performance.py  test_personas.py
